--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
@@ -75,6 +81,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>todolistApp</finalName>
     </build>
 
 </project>
